load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_binary(
    name = "bosun",
    srcs=["main.go"],
    deps = [
        "//cmd:commands",
    ],
    importpath = "github.com/misterbianco/bosun",
    visibility = ["//visibility:public"],
)
