load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library"
)

go_library(
    name = "commands",
    srcs = glob([
        "*.go"
    ]),
    deps = [
        "//push:push",
        "//build:build",
        "//utils:utils",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
    ],
    importpath = "github.com/misterbianco/bosun/cmd",
    visibility = ["//visibility:public"]
)
