load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library"
)

go_library(
    name = "utils",
    srcs = glob([
        "*.go"
    ]),
    deps = [
        "@in_gopkg_yaml_v2//:go_default_library",
        "@com_github_blang_semver//:go_default_library",
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_docker_docker//pkg/jsonmessage:go_default_library",
	    "@com_github_docker_docker//pkg/term:go_default_library"
    ],
    importpath = "bosun/utils",
    visibility = ["//visibility:public"]
)
